...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_h_details">

    <Button
        android:id="@+id/addbtn"
        android:layout_width="299dp"
        android:layout_height="49dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_login"
        android:text="@string/add_h_details"
        android:textColorHint="@color/black"
...
